# tiles-localization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launcher.launch  manual.launch  package.xml  readme.org
jl/tiles/: Manifest.toml  Project.toml  equations.jl
msg/: Cmd.msg  Observation.msg  State.msg
py/: dyntile.py  plot.py  pyibexTile.py  tile_param.py
sim/: myserver_ros.lua  simu_tiles_loc.ttt
src/: CMakeLists.txt  command.cpp  controller.cpp  estimator.cpp  localization.cpp  robot.cpp  test_param.cpp  viewer.cpp
src/save/: save 25 08 20.cpp  save 27 08 20 11h00.cpp  save 27 08 20 13h00 cercle 3 pi sur 4.cpp  viewer marche.cpp
